swiping works, need to start filters